--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </template>
         <!-- navbar  -->
         <template>
-            <b-navbar fixed-top="true">
+            <b-navbar :fixed-top="true">
                 <template #brand>
                     <b-navbar-item>
                         <b-navbar-item href="#app">
@@ -127,7 +127,7 @@
                     <section>
 
                         <b-table :data="data" ref="table" paginated per-page="5"
-                            detailed detail-key="id" :detail-transition="fade"
+                            detailed detail-key="id"
                             :show-detail-icon="true" aria-next-label="Next page" aria-previous-label="Previous page"
                             aria-page-label="Page" aria-current-label="Current page">
 
