changed fixed-top to boolean

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </template>
         <!-- navbar  -->
         <template>
-            <b-navbar :fixed-top="true">
+            <b-navbar :fixed-top=true>
                 <template #brand>
                     <b-navbar-item>
                         <b-navbar-item href="#app">
