--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="manifest" href="manifest.json">
     <link rel="apple-touch-icon" href="./images/icons/icon-192x192.png">
     <link rel="apple-touch-icon" href="./images/icons/icon-256x256.png">
