add media queries for desktop center

--- a/index.html
+++ b/index.html
@@ -73,11 +73,11 @@
                             <b-image src="images/main.jpg" placeholder="images/main-blur.jpg" ratio="16by9"></b-image>
                         </figure>
                     </div>
-                    <div class="card-content  is-overlay is-vertical-center">
-                        <p class="title is-size-3-mobile is-size-1 has-text-light is-capitalized is-family-monospace">
+                    <div class="card-content is-overlay is-custom-vertical-center">
+                        <p class="title is-size-3-mobile is-size-1 has-text-white is-capitalized is-family-monospace">
                             John Doe
                         </p>
-                        <p class="subtitle is-size-4-mobile has-text-light is-capitalized is-family-monospace">
+                        <p class="subtitle is-size-4-mobile has-text-white is-capitalized is-family-monospace">
                             Software Developer
                         </p>
                     </div>
